--- a/Python/ui.ui
+++ b/Python/ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>831</width>
-    <height>610</height>
+    <width>761</width>
+    <height>589</height>
    </rect>
   </property>
   <property name="font">
@@ -20,15 +20,74 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>250</y>
-      <width>256</width>
-      <height>192</height>
+      <x>10</x>
+      <y>0</y>
+      <width>731</width>
+      <height>541</height>
      </rect>
     </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="1">
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="text">
+        <string>重置</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="text">
+        <string>刪除</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>新增</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="pushButton_4">
+       <property name="text">
+        <string>完成</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0" rowspan="4">
+      <widget class="QTableWidget" name="tableWidget">
+       <column>
+        <property name="text">
+         <string>商品編號</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>商品名稱</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>單價</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>數量</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>小計</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -36,8 +95,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>831</width>
-     <height>22</height>
+     <width>761</width>
+     <height>25</height>
     </rect>
    </property>
   </widget>
